# Q_Sensor_API

./: .gitignore  AUTO_RECORD_CONFLICT_FIX.md  CHANGELOG.md  Dockerfile  FILE_HANDLE_FIX.md  README.md  RECORDING_CHAIN_AUDIT.md  diagnose_connection.py  manifest.json.template  metadata.json  pyproject.toml  requirements.txt  test_qsensor_e2e.sh
api/: __init__.py  main.py
data_store/: __init__.py  schemas.py  store.py
docs/: 00_Serial_protocol_2150.md  API_IMPLEMENTATION_SUMMARY.md  API_REFERENCE.md  API_RUNBOOK_PI.md  ARCHITECTURE.md  AUDIT_AND_FIXES_NEEDED.md  DATAFRAME_RECORDING.md  FINAL_AUDIT_REPORT.md  FIRMWARE_ALIGNMENT.md  FIRMWARE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  PI_TEST_RUNBOOKS.md  TEST_FIXES_SUMMARY.md  WEBAPP_BUILD.md
examples/: freerun_demo.py  pause_resume_demo.py  polled_demo.py
fakes/: __init__.py  fake_serial.py
pi_hw_tests/: 00_env_check.py  01_connect_and_identify.py  02_freerun_smoke.py  03_polled_smoke.py  04_menu_consistency.py  05_temp_vin_presence.py  06_pause_resume_durability.py  07_disconnect_reconnect.py  08_burn_in_30min.py  09_export_throughput.py  README.md  common.py
pi_runbooks/: 01_start_api.sh
q_sensor_lib/: __init__.py  controller.py  errors.py  models.py  parsing.py  protocol.py  ring_buffer.py  transport.py
scripts/: build_local.sh  build_on_pi.sh  cleanup_pi.sh  pi_load_and_run.sh  run_local.sh  save_image.sh
tests/: __init__.py  test_api_endpoints.py  test_api_ws.py  test_config_set_get.py  test_connect_and_menu.py  test_data_recorder_basic.py  test_error_paths.py  test_freerun_stream.py  test_pause_resume_stop.py  test_polled_sequence.py
tools/: debug_serial.py
(+7 files in other folders)
